design in progress

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,19 @@
 /* MIXIN **************************************************************************** */
 
 @import "mixin";
+
+/* GAMEOFLIFE *********************************************************************** */
+
+@import "./../components/GameOfLife";
+
+/* GAMECONTROLS ********************************************************************* */
+
+@import "./../components/GameControls";
+
+/* GAMEBOARD ************************************************************************ */
+
+@import "./../components/GameBoard";
+
+/* GAMESETTINGS ********************************************************************* */
+
+@import "./../components/GameSettings";
