--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,9 +14,11 @@ $basic: 'Raleway', sans-serif;
 
 /* Theme - colors */
 
-$orange: rgb(189, 115, 68);
-$red: rgb(168, 41, 60);
-$purple: rgb(88, 46, 68);
-$olive: rgb(142, 122, 61);
-$yellow: rgb(215, 185, 87);
-$black: rgba(26, 36, 45, 0.9);
+$blue: rgb(18, 55, 125);
+$orange: rgb(247, 136, 47);
+$yellow: rgb(249, 194, 49);
+$gray: rgb(219, 200, 170);
+$white: rgb(239, 238, 233);
+$black: rgb(0, 0, 0);
+
+
