--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,3 +27,11 @@
 /* GAMESETTINGS ********************************************************************* */
 
 @import "./../components/GameSettings";
+
+/* GAMEMENU ************************************************************************* */
+
+@import "./../components/GameMenu";
+
+/* HAMBURGERMENU ******************************************************************** */
+
+@import "./../components/HamburgerMenu";
