--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,11 +14,17 @@ $basic: 'Raleway', sans-serif;
 
 /* Theme - colors */
 
-$blue: rgb(18, 55, 125);
-$orange: rgb(247, 136, 47);
-$yellow: rgb(249, 194, 49);
 $gray: rgb(219, 200, 170);
 $white: rgb(239, 238, 233);
 $black: rgb(0, 0, 0);
 
+$dark-blue: rgb(0, 80, 115);
+$darker-blue: rgb(16, 125, 172);
+$blue: rgb(24, 154, 211);
+$lighter-blue: rgb(30, 187, 215);
+$light-blue: rgb(113, 199, 236);
 
+$pad-blue: rgb(45, 124, 183);
+$pad-green: rgb(59, 182, 115);
+$pad-orange: rgb(228, 136, 35);
+$pad-red: rgb(211, 72, 65);
