--- a/src/components/GameOfLife.scss
+++ b/src/components/GameOfLife.scss
@@ -1,7 +1,7 @@
 .header {
   background-color: $black;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   min-height: 80px;
   padding: 10px 20px;
@@ -15,7 +15,8 @@
   font-weight: 800;
   text-align: center;
   padding: 10px;
-  max-width: 250px;
+  max-width: 220px;
+  flex: 1 1 50%;
 
   border-top: solid 4px $gray;
   border-bottom: solid 4px $gray;
@@ -43,6 +44,20 @@
   left: 0;
   right: 0;
   z-index: -1;
+}
+
+.main__menu-title {
+  font: $large $basic;
+  color: $gray;
+  background-color: $black;
+  font-weight: 800;
+  text-align: center;
+  padding: 10px;
+  width: 150px;
+  text-transform: uppercase;
+
+  border-top: solid 4px $gray;
+  border-bottom: solid 4px $gray;
 }
 
 .main__trapezoid {
