board cells added

--- a/src/components/GameBoard.scss
+++ b/src/components/GameBoard.scss
@@ -1,7 +1,9 @@
 .GameBoard {
-  width: 800px;
-  height: 400px;
   background-color: $gray;
   border: solid 4px $black;
   border-radius: 20px;
+  padding: 10px;
+
+  display: flex;
+  flex-wrap: wrap;
 }
