--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,3 +35,7 @@
 /* HAMBURGERMENU ******************************************************************** */
 
 @import "./../components/HamburgerMenu";
+
+/* BOARDCELL ************************************************************************ */
+
+@import "./../components/BoardCell";
